--- a/css/layerArray.css
+++ b/css/layerArray.css
@@ -35,7 +35,7 @@ html .ui-button.ui-state-disabled:active {
     background: none;
     box-shadow: none;
 }
-.slider-axis h4 {
+.info.slider-axis h4 {
     color: #111;
     margin-bottom: 15px;
 }
